wrote the implementation for the activation email and restructured the project